--- a/Shopify.Web/wwwroot/index.html
+++ b/Shopify.Web/wwwroot/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="Shopify.Web.styles.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -74,6 +76,7 @@
     </script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/ShoppingCartFunctions.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
 
 </body>
