--- a/Shopify.Web/wwwroot/index.html
+++ b/Shopify.Web/wwwroot/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
-
 <body>
     <div id="app">Loading...</div>
 
@@ -25,7 +23,7 @@
     </div>
     <script src="https://www.paypal.com/sdk/js?client-id=Afso2qhqtGhhKcM8vjdxkSW1QJ-sduzviNAFj1v1837i6Xgh28g28bqHy7Odi7EN2xHnfU6cdF6C7Rnm&currency=USD" data-sdk-integration-source="button-factory"></script>
     <script>
-        function initPayPalButton() {
+        function initPayPalButton(dotNetRef) {
             var description = document.querySelector('#smart-button-container #description');
             var amount = document.querySelector('#smart-button-container #amount');
 
@@ -39,11 +37,9 @@
                     shape: 'rect',
                     label: 'paypal',
                     layout: 'vertical',
-
                 },
 
                 createOrder: function (data, actions) {
-
                     purchase_units[0].description = description.value;
                     purchase_units[0].amount.value = amount.value;
 
@@ -54,17 +50,16 @@
 
                 onApprove: function (data, actions) {
                     return actions.order.capture().then(function (orderData) {
-
-                        // Full available details
                         console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
 
-                        // Show a success message within this page, e.g.
                         const element = document.getElementById('paypal-button-container');
                         element.innerHTML = '';
                         element.innerHTML = '<h3>Thank you for your payment!</h3>';
 
-                        // Or go to another URL:  actions.redirect('thank_you.html');
-
+                        // Invoke the C# method using the DotNetObjectReference
+                        dotNetRef.invokeMethodAsync('CreateOrderAfterPayment')
+                            .then(() => console.log('C# method invoked successfully'))
+                            .catch(err => console.error('Error invoking C# method:', err));
                     });
                 },
 
@@ -77,6 +72,5 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/ShoppingCartFunctions.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
-
 </body>
+</html>
